# MolClassifier

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  build_docker.x  pyproject.toml
mol_classifier/: albumentations_transforms.py  classifier.py  coco_utils.py  dataset.py  ext_coco_eval.py  ext_coco_utils.py  ext_engine.py  ext_transforms.py  ext_utils.py  mask_utils.py  model.py
